--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,9 @@ osmnx = "^2.0.2"
 tensorboard = "^2.19.0"
 
 
+[tool.poetry.group.dev.dependencies]
+ruff = "^0.11.8"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
