--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ scikit-learn = "^1.6.1"
 geopandas = "^1.0.1"
 pyarrow = "^20.0.0"
 fastparquet = "^2024.11.0"
+alphashape = "^1.3.1"
 
 
 [tool.poetry.group.dev.dependencies]
