--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,9 +17,10 @@ osmnx = "^2.0.2"
 tensorboard = "^2.19.0"
 scikit-learn = "^1.6.1"
 geopandas = "^1.0.1"
-pyarrow = "^20.0.0"
 fastparquet = "^2024.11.0"
 alphashape = "^1.3.1"
+mlflow = "^2.22.0"
+pyarrow = ">=4.0.0,<20"
 
 
 [tool.poetry.group.dev.dependencies]
