--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,8 @@ fastparquet = "^2024.11.0"
 alphashape = "^1.3.1"
 mlflow = "^2.22.0"
 pyarrow = ">=4.0.0,<20"
+hydra-core = "^1.3.2"
+hydra-optuna-sweeper = "^1.2.0"
 
 
 [tool.poetry.group.dev.dependencies]
