--- a/thesis_floor_halkes/conf/config.yaml
+++ b/thesis_floor_halkes/conf/config.yaml
@@ -14,6 +14,9 @@ hydra:
     params:
       decoder.num_heads: choice(1, 2, 4, 8)
       reward_mod.penalty_per_step_value: choice(-1.0, -5.0, -10.0, -20.0)
+      reinforce.discount_factor: choice(0.85, 0.9, 0.95, 0.99)
+      reinforce.entropy_coeff: choice(0.01, 0.1, 0.2)
+      decoder.learning_rate: choice(0.0001, 0.001, 0.01)
 
 decoder:
   num_heads: 4
@@ -50,7 +53,7 @@ reinforce:
 
 training:
   batch_size: 32
-  num_epochs: 1
+  num_epochs: 5
   max_steps: 30
   patience: 10
   early_stopping: True
