--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ mlflow = "^2.22.0"
 pyarrow = ">=4.0.0,<20"
 hydra-core = "^1.3.2"
 hydra-optuna-sweeper = "^1.2.0"
+hydra-joblib-launcher = "^1.2.0"
 
 
 [tool.poetry.group.dev.dependencies]
