--- a/thesis_floor_halkes/conf/config.yaml
+++ b/thesis_floor_halkes/conf/config.yaml
@@ -1,6 +1,7 @@
 defaults:
   - override hydra/sweeper: optuna
   - override hydra/sweeper/sampler: tpe
+  - override hydra/launcher: joblib
 
 hydra:
   sweeper:
@@ -9,10 +10,10 @@ hydra:
     direction: minimize
     study_name: sphere
     storage: null
-    n_trials: 20
-    n_jobs: 1
+    n_trials: 8
+    n_jobs: 4
     params:
-      decoder.num_heads: choice(1, 2, 4, 8)
+      decoder.num_heads: choice(2, 4, 8)
       reward_mod.penalty_per_step_value: choice(-1.0, -5.0, -10.0, -20.0)
       reinforce.discount_factor: choice(0.85, 0.9, 0.95, 0.99)
       reinforce.entropy_coeff: choice(0.01, 0.1, 0.2)
