--- a/thesis_floor_halkes/conf/config.yaml
+++ b/thesis_floor_halkes/conf/config.yaml
@@ -7,22 +7,23 @@ hydra:
   sweeper:
     sampler:
       seed: 123
-    direction: minimize
+    direction: maximize
     study_name: sphere
     storage: null
-    n_trials: 4
-    n_jobs: 1
+    n_trials: 20
+    n_jobs: 4
     params:
-      decoder.num_heads: choice(2, 4, 8)
+      # decoder.num_heads: choice(2, 4, 8)
       reward_mod.penalty_per_step_value: choice(-1.0, -5.0, -10.0, -20.0)
-      reinforce.discount_factor: choice(0.85, 0.9, 0.95, 0.99)
-      reinforce.entropy_coeff: choice(0.01, 0.1, 0.2)
-      decoder.learning_rate: choice(0.0001, 0.001, 0.01)
+      decoder.learning_rate: tag(log, interval(1e-4, 1e-1))
+      reinforce.discount_factor: interval(0.90, 0.999)
+      reinforce.entropy_coeff: tag(log, interval(1e-4, 0.1))
+      reinforce.baseline_loss_coeff: tag(log, interval(0.01, 10.0))
 
 decoder:
   num_heads: 8
   embedding_dim: 128
-  learning_rate: 0.1
+  learning_rate: 0.01
   dropout: 0.1
 
 stat_enc:
@@ -49,13 +50,13 @@ baseline:
 reinforce:
   discount_factor: 0.99
   entropy_coeff: 0.0
-  baseline_loss_coeff: 0.1
+  baseline_loss_coeff: 1
   max_grad_norm: 0.5
 
 training:
   batch_size: 8
-  num_epochs: 100
-  max_steps: 40
+  num_epochs: 1000
+  max_steps: 80
   patience: 10
   early_stopping: True
   save_best_model: True
