add early stopping

--- a/thesis_floor_halkes/conf/config.yaml
+++ b/thesis_floor_halkes/conf/config.yaml
@@ -13,22 +13,21 @@ hydra:
     n_trials: 50
     n_jobs: 3
     params:
-      decoder.num_heads: choice(2, 4, 8, 16)
+      decoder.num_heads: choice(4, 8, 16)
       reward_mod.penalty_per_step_value: choice(-1.0, -5.0, -10.0, -20.0)
-      reward_mod.dead_end_penalty_value: range(-1000, -10, 10)
+      reward_mod.dead_end_penalty_value: range(-100, -10, 10)
       reward_mod.goal_bonus_value: choice(500.0, 1000.0, 2000.0)
 
-      decoder.learning_rate: tag(log, interval(1e-4, 1e-1))
+      decoder.learning_rate: tag(log, interval(1e-5, 1e-3))
 
       # If you want to tune learning rates individually, uncomment the lines below
       # and also adjust accordingly in the train script
       # stat_enc.learning_rate: tag(log, interval(1e-4, 1e-1))
       # dyn_enc.learning_rate: tag(log, interval(1e-4, 1e-1))
       # baseline.learning_rate: tag(log, interval(1e-4, 1e-1))
-
-      stat_enc.dropout: interval(0.1, 0.5)
-      dyn_enc.dropout: interval(0.1, 0.5)
-      baseline.dropout: interval(0.1, 0.5)
+      stat_enc.dropout: interval(0, 0.4)
+      dyn_enc.dropout: interval(0, 0.4)
+      baseline.dropout: interval(0, 0.4)
 
       reinforce.discount_factor: interval(0.90, 0.999)
       reinforce.entropy_coeff: tag(log, interval(1e-4, 0.1))
@@ -37,7 +36,7 @@ hydra:
 decoder:
   num_heads: 8
   embedding_dim: 128
-  learning_rate: 0.01
+  learning_rate: 0.001
   dropout: 0.1
 
 stat_enc:
@@ -65,11 +64,11 @@ baseline:
 reinforce:
   discount_factor: 0.99
   entropy_coeff: 0.1
-  baseline_loss_coeff: 1
+  baseline_loss_coeff: 0.001
   max_grad_norm: 0.5
 
 training:
-  num_epochs: 500
+  num_epochs: 100
   batch_size: 16
   max_steps: 80
   patience: 10
