--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ pyarrow = ">=4.0.0,<20"
 hydra-core = "^1.3.2"
 hydra-optuna-sweeper = "^1.2.0"
 hydra-joblib-launcher = "^1.2.0"
+hydra-ray-launcher = "^1.2.1"
 
 
 [tool.poetry.group.dev.dependencies]
