--- a/thesis_floor_halkes/conf/config.yaml
+++ b/thesis_floor_halkes/conf/config.yaml
@@ -10,7 +10,7 @@ hydra:
     direction: maximize
     study_name: sphere
     storage: null
-    n_trials: 50
+    n_trials: 500
     n_jobs: 3
     params:
       decoder.num_heads: choice(4, 8, 16)
@@ -30,8 +30,14 @@ hydra:
       baseline.dropout: interval(0, 0.4)
 
       reinforce.discount_factor: interval(0.90, 0.999)
-      reinforce.entropy_coeff: tag(log, interval(1e-4, 0.1))
+      reinforce.entropy_coeff: tag(log, interval(1e-3, 1))
       reinforce.baseline_loss_coeff: tag(log, interval(0.01, 1.0))
+
+data:
+  train_path: data/training_data_2/smart_lights
+  val_path: data/validation_data_2/smart_lights
+  test_path: data/test_data_2/smart_lights
+  data_file: data.pt
 
 decoder:
   num_heads: 8
